Fixed layout issues & add extra space between css

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,6 +5,7 @@
 
 }
 
+
 header {
     display: flex;
     justify-content: center;
@@ -24,9 +25,11 @@ body {
     height: 100dvh;
 }
 
+
 .hide {
     display: none !important;
 }
+
 
 #game-rules {
     font-size: 16px;
@@ -34,20 +37,19 @@ body {
     border: 4px solid black;
     border-radius: 20px;
     box-shadow: 0 0 10px 2px black;
-    margin: 100px 300px 100px 300px;
+    margin: 20px 300px 50px 300px;
+    padding: 10px 10px 10px 10px;
     display: flex;
     justify-content: center;
     text-align: center;
 }
+
 
 #game-rules p {
     font-size: 25px;
     color: black;
 }
 
-#gamerules-item {
-    padding: 50px;
-}
 
 #game-rules img {
     height: 300px;
@@ -60,6 +62,7 @@ body {
     justify-content: center;
     margin-top: 20px;
 }
+
 
 #play-btn {
     font-size: 30px;
@@ -80,7 +83,9 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 0px;
 }
+
 
 #main-game-item {
     background-color: rgb(241, 20, 141);
@@ -90,11 +95,10 @@ body {
     border: 4px solid black;
     border-radius: 20px;
     padding: 40px 100px 40px 100px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+    margin-top: 40px;
     box-shadow: 0 0 10px 2px black;
-    min-height: 100%;
 }
+
 
 #score-area {
     font-size: 40px;
@@ -102,11 +106,13 @@ body {
     justify-content: space-evenly;
 }
 
+
 #score-area p {
-    padding: 40px;
+    padding: 50px;
     padding-bottom: 50px;
     color: black;
 }
+
 
 #winner-result {
     font-size: 40px;
@@ -118,12 +124,14 @@ body {
     color: black;
 }
 
+
 #game-area {
     display: flex;
     justify-content: space-evenly;
     padding: 20px;
     padding-top: 55px;
 }
+
 
 .game-btn {
     font-size: 30px;
@@ -136,12 +144,14 @@ body {
     cursor: pointer;
 }
 
+
 .game-btn:hover {
     color: rgb(241, 20, );
     background-color: black;
     border: 4px solid rgb(241, 20, 141);
     transition: 0.8s;
 }
+
 
 #win-streaks {
     font-size: 30px;
@@ -153,6 +163,7 @@ body {
     color: black;
 }
 
+
 #end-game-container {
     font-size: 20px;
     background-color: rgb(241, 20, 141);
@@ -160,12 +171,13 @@ body {
     border-radius: 20px;
     box-shadow: 0 0 10px 2px black;
     padding: 25px;
-    margin: 100px 250px 100px 250px;
+    margin: 50px 250px 20px 250px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
 }
+
 
 #end-game-img img {
     padding: 20px;
@@ -173,6 +185,7 @@ body {
     width: 300px;
     border-radius: 200px;
 }
+
 
 #play-btn2 {
     font-size: 30px;
@@ -308,17 +321,22 @@ body {
 @media screen and (max-width: 760px) {
     header {
         font-size: 18px;
-        line-height: 60px
+        line-height: 60px;
     }
 
     #game-rules {
         font-size: 12px;
-        margin: 80px 20px 90px 20px;
-        padding: 0;
+        margin: 40px 20px 0px 20px;
+        padding: 10px;
     }
 
     #game-rules p {
         font-size: 15px;
+    }
+
+    #game-rules img {
+        height: 200px;
+        width: 200px;
     }
 
     #play-btn {
@@ -340,8 +358,9 @@ body {
         display: flex;
         flex-direction: column;
         align-content: space-evenly;
-        border-radius: 20px;
+        border-radius: 30px;
         padding: 30px 20px 30px 20px;
+        margin: 15px;
     }
 
     #score-area {
